--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "repl-nix-workspace"
+name = "natural-language-sql-converter"
 version = "0.1.0"
-description = "Add your description here"
+description = "Flask web application that converts natural language to SQL queries using Azure OpenAI"
 requires-python = ">=3.11"
 dependencies = [
     "azure-ai-inference>=1.0.0b9",
@@ -18,3 +22,7 @@ dependencies = [
     "sqlparse>=0.5.3",
     "werkzeug>=3.1.3",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["services*"]
