--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "openai>=1.93.0",
     "psycopg2-binary>=2.9.10",
     "pyodbc>=5.2.0",
+    "python-dotenv>=1.0.0",
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "sqlparse>=0.5.3",
